Fix jumping background
Изменил настройки page-body::before - задал ширину и высоту

--- a/style/style.css
+++ b/style/style.css
@@ -47,10 +47,10 @@ button {
   content: '';
   position: fixed;
   left: 0;
-  right: 0;
   top: 0;
-  bottom: 0;
   z-index: -1;
+  width: 100%;
+  height: 100%;
   background-image: url(../img/bg-smartphone@1x.jpg);
   background-size: cover;
   background-position: center;
